added: servlet lecture 05 servlet config with xml file

--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
 	<display-name>edu</display-name>
-
-</web-app>
-
-<!-- 
+	
 	<servlet>
-		<servlet-name>first</servlet-name>
-		<servlet-class>com.edu.test.FirstServlet</servlet-class>
+		<servlet-name>initParam</servlet-name>
+		<servlet-class>com.edu.test.InitParamServlet</servlet-class>
+		<init-param>
+			<param-name>id</param-name>
+			<param-value>guest</param-value>
+		</init-param>
+		<init-param>
+			<param-name>password</param-name>
+			<param-value>1000</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
 	<servlet-mapping>
-		<servlet-name>first</servlet-name>
-		<url-pattern>/hello</url-pattern>
+		<servlet-name>initParam</servlet-name>
+		<url-pattern>/initParamTest</url-pattern>
 	</servlet-mapping>
- -->
+</web-app>
