--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -3,21 +3,16 @@
 	<display-name>edu</display-name>
 	
 	<servlet>
-		<servlet-name>initParam</servlet-name>
+		<servlet-name>servletConfigTest</servlet-name>
 		<servlet-class>com.edu.test</servlet-class>
 		<init-param>
-			<param-name>id</param-name>
-			<param-value>guest</param-value>
+			<param-name>charset</param-name>
+			<param-value>UTF-8</param-value>
 		</init-param>
-		<init-param>
-			<param-name>password</param-name>
-			<param-value>1000</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>initParam</servlet-name>
-		<url-pattern>/initParamTest</url-pattern>
+		<servlet-name>servletConfigTest</servlet-name>
+		<url-pattern>/servletConfigTest</url-pattern>
 	</servlet-mapping>
 </web-app>
