--- a/edu/src/main/webapp/WEB-INF/web.xml
+++ b/edu/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,12 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
 	<display-name>edu</display-name>
 	
-	<servlet>
+	<context-param>
+		<param-name>contexztConfig</param-name>
+		<param-value>/WEB-INF/context.xml</param-value>
+	</context-param>
+	
+	<!-- <servlet>
 		<servlet-name>servletConfigTest</servlet-name>
 		<servlet-class>com.edu.test</servlet-class>
 		<init-param>
@@ -14,5 +19,5 @@
 	<servlet-mapping>
 		<servlet-name>servletConfigTest</servlet-name>
 		<url-pattern>/servletConfigTest</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 </web-app>
